updated version number, new snippet wmd overflow bugfix

--- a/app/html5-boilerplate/css/custom.css
+++ b/app/html5-boilerplate/css/custom.css
@@ -308,7 +308,7 @@ margin: auto;
 
 #snippet_new .c1 {
     padding-right:30px;
-
+    width:500px;
 }
 #snippet_new .c2 {
     padding-left:30px;
